src/snapshots/tests__cnf_formula.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    Disjunction(
        [
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
