src/snapshots/tests__comment_block.snap
---
source: src/tests.rs
expression: parsed
---
[
    47,
    42,
    32,
    97,
    10,
    32,
    98,
    108,
    111,
    99,
    107,
    32,
    42,
    32,
    47,
    32,
    99,
    111,
    109,
    109,
    101,
    110,
    116,
    10,
    42,
    47,
]
