src/snapshots/tests__comment_line.snap
---
source: src/tests.rs
expression: parsed
---
[
    37,
    32,
    97,
    32,
    99,
    111,
    109,
    109,
    101,
    110,
    116,
    10,
]
