src/snapshots/tests__constant.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    Functor(
        Lower(
            LowerWord(
                "constant",
            ),
        ),
    ),
)
