src/snapshots/tests__disjunction-2.snap
---
source: src/tests.rs
expression: parsed
---
[
    Literal(
        Proposition(
            LowerWord(
                "p",
            ),
        ),
    ),
    NegatedLiteral(
        Proposition(
            LowerWord(
                "q",
            ),
        ),
    ),
]
