src/snapshots/tests__disjunction-5.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        NegatedAtomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "q",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "r",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
