src/snapshots/tests__disjunction.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
