src/snapshots/tests__dollar_word.snap
---
source: src/tests.rs
expression: parsed
---
DollarWord(
    LowerWord(
        "dollar",
    ),
)
