src/snapshots/tests__external_source-2.snap
---
source: src/tests.rs
expression: parsed
---
File(
    "\'file\'",
    Some(
        LowerWord(
            "name",
        ),
    ),
)
